[package]
name = "roc_dec"
version = "0.1.0"
authors = ["Richard Feldman <oss@rtfeldman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decimal = "2"

# [dev-dependencies]
# bencher = "0.1"

# [[bench]]
# name = "dec"
# harness = false
